[package]
name = "ieee754-interpreter"
version = "0.1.0"
authors = ["FliegendeWurst <2012gdwu@web.de>"]
license = "GPL-3.0+"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
codegen-units = 1

[dependencies]
